--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html class="inset-full">
   <head>
+    <title>트릭컬 두루마리 짤 생성기</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
+    <meta name="keywords" content="트릭컬, Trickcal, 두루마리, 트릭컬 두루마리">
+    <meta name="Description" content="버터, 에르핀 두루마리 짤 만들기" />
+    <meta charset="UTF - 8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="트릭컬 두루마리 짤 생성기" />
+    <meta property="og:description" content="버터, 에르핀 두루마리 짤 만들기" />
+    <meta property="og:image" content="./475731059_17856458862362958_5142921208880804035_n.jpg" />
+    <link rel="shortcut icon" href="./475731059_17856458862362958_5142921208880804035_n.jpg">
   </head>
+  
   <body
     class="inset-full flex flex-col items-center"
     style="
