--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
     <div class="container flex flex-col items-center flex-grow-0 md:w-11/12 w-full">
       <p class="font-['OneMobliePop'] lg:text-6xl md:text-7xl text-8xl">트릭컬 두루마리 짤 생성기</h1>
       <div class="flex lg:flex-row flex-col items-center justify-center">
-      <div class="m-10 w-3/10 relative" id='result'>
+        <div class="m-10 w-3/10">
+      <div class="relative" id='result'>
         <img src="475731059_17856458862362958_5142921208880804035_n.jpg" class="z-10" id="background">
         <div class="absolute inset-y-58/100 inset-x-59/100 w-[20%] h-[50%] rotate-[46.5deg] flex flex-row items-center justify-center">
           <p id='text' class="w-full overflow-clip text-[#fcd85f] [text-shadow:_2px_0px_#a41b1b,_-2px_0px_#a41b1b,_0px_2px_#a41b1b,_0px_-2px_#a41b1b] font-['OneMobliePop'] text-center text-6xl">예시</p>
         </div>
       </div>
+    </div>
       <div class="flex flex-col items-center justify-center w-1/2">
       <p class="font-['OneMobliePop'] lg:text-4xl md:text-5xl text-6xl">이미지 선택</p>
       <div class="flex flex-row justify-center">
