--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="버터, 에르핀 두루마리 짤 만들기" />
     <meta property="og:image" content="./475731059_17856458862362958_5142921208880804035_n.jpg" />
     <link rel="shortcut icon" href="./475731059_17856458862362958_5142921208880804035_n.jpg">
+    <link rel="manifest" href="/manifest.json" />
   </head>
   
   <body
